--- a/FlickrApp/FlickrApp/Base.lproj/Main.storyboard
+++ b/FlickrApp/FlickrApp/Base.lproj/Main.storyboard
@@ -154,12 +154,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HuA-xA-iis">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <connections>
-                                    <segue destination="5hc-uC-lkW" kind="embed" id="hkI-wu-7jQ"/>
-                                </connections>
-                            </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kuf-rt-dEK">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <connections>
@@ -168,12 +162,6 @@
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="HuA-xA-iis" firstAttribute="top" secondItem="hgP-fw-jsh" secondAttribute="topMargin" id="8Kf-kI-BOC"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="HuA-xA-iis" secondAttribute="trailing" constant="-16" id="QGh-Iu-qNy"/>
-                            <constraint firstItem="HuA-xA-iis" firstAttribute="leading" secondItem="hgP-fw-jsh" secondAttribute="leadingMargin" constant="-16" id="WdR-On-uy8"/>
-                            <constraint firstItem="lCH-50-J2z" firstAttribute="top" secondItem="HuA-xA-iis" secondAttribute="bottom" id="dFb-Pj-HtS"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qBq-1q-Y8l">
                         <barButtonItem key="leftBarButtonItem" title="Info" id="gkv-zy-S6z">
@@ -229,29 +217,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XdH-dG-QKs">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XdH-dG-QKs">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HB4-H1-B6I">
-                                        <rect key="frame" x="113" y="601" width="188" height="30"/>
-                                        <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="188" id="Jlf-Jr-4xQ"/>
-                                        </constraints>
-                                        <state key="normal" title="STORY Long press">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                    </button>
-                                    <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YorkMills" translatesAutoresizingMaskIntoConstraints="NO" id="Gk8-ww-SO3">
+                                    <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="YorkMills" translatesAutoresizingMaskIntoConstraints="NO" id="Gk8-ww-SO3">
                                         <rect key="frame" x="8" y="8" width="398" height="720"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="Gk8-ww-SO3" firstAttribute="leading" secondItem="XdH-dG-QKs" secondAttribute="leading" constant="8" id="17z-cV-yUU"/>
-                                    <constraint firstAttribute="centerX" secondItem="HB4-H1-B6I" secondAttribute="centerX" id="9F0-mj-RLP"/>
                                     <constraint firstAttribute="trailing" secondItem="Gk8-ww-SO3" secondAttribute="trailing" constant="8" id="Rgj-3b-UbZ"/>
-                                    <constraint firstAttribute="centerY" secondItem="HB4-H1-B6I" secondAttribute="centerY" constant="-248" id="Wpf-dc-H6n"/>
                                     <constraint firstItem="Gk8-ww-SO3" firstAttribute="top" secondItem="XdH-dG-QKs" secondAttribute="top" constant="8" id="gEy-Dj-4ze"/>
                                     <constraint firstAttribute="bottom" secondItem="Gk8-ww-SO3" secondAttribute="bottom" constant="8" id="gud-B7-PvA"/>
                                 </constraints>
@@ -272,10 +248,10 @@
             </objects>
             <point key="canvasLocation" x="2225" y="838"/>
         </scene>
-        <!--Story View Controller-->
+        <!--Display View Controller-->
         <scene sceneID="Lqh-jh-6PJ">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="Rim-AJ-b1T" customClass="StoryViewController" customModule="FlickrApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="Rim-AJ-b1T" customClass="DisplayViewController" customModule="FlickrApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="MYO-xF-ktB"/>
                         <viewControllerLayoutGuide type="bottom" id="KmP-hr-ekh"/>
@@ -302,21 +278,104 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uLQ-cL-dms">
-                                <rect key="frame" x="149" y="158" width="305" height="357"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uLQ-cL-dms">
+                                <rect key="frame" x="60" y="158" width="305" height="357"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HB4-H1-B6I">
+                                <rect key="frame" x="110" y="528" width="188" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="188" id="Jlf-Jr-4xQ"/>
+                                </constraints>
+                                <state key="normal" title="STORY Long press">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showStory:" destination="Rim-AJ-b1T" eventType="touchUpInside" id="USR-Af-qkP"/>
+                                </connections>
+                            </button>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B1P-23-HtY">
+                                <rect key="frame" x="93" y="260" width="240" height="255"/>
+                                <connections>
+                                    <segue destination="EnD-nC-Olq" kind="embed" identifier="EmbedSegue" id="Q5Z-ix-CFh"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="0.17999999999999999" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="uLQ-cL-dms" secondAttribute="centerX" constant="87.5" id="1JA-cA-umW"/>
+                            <constraint firstItem="uLQ-cL-dms" firstAttribute="top" secondItem="MYO-xF-ktB" secondAttribute="bottom" constant="158" id="74I-fd-oxk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uLQ-cL-dms" secondAttribute="trailing" constant="219" id="9tu-FY-I0N"/>
+                            <constraint firstAttribute="centerY" secondItem="uLQ-cL-dms" secondAttribute="centerY" constant="-36.5" id="A1U-cN-zmc"/>
+                            <constraint firstItem="KmP-hr-ekh" firstAttribute="top" secondItem="uLQ-cL-dms" secondAttribute="bottom" constant="85" id="aoC-it-ykm"/>
+                            <constraint firstItem="uLQ-cL-dms" firstAttribute="leading" secondItem="aMG-bZ-Ze3" secondAttribute="leadingMargin" constant="44" id="ptF-by-QLw"/>
+                        </constraints>
                     </view>
                     <toolbarItems/>
                     <connections>
                         <outlet property="imageArray" destination="uLQ-cL-dms" id="vcy-Sl-QKS"/>
+                        <outlet property="storyContainer" destination="B1P-23-HtY" id="OKL-Nj-N5r"/>
                         <outlet property="testArray" destination="4we-18-cZC" id="Ua0-hx-tdZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gPC-7M-GOF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1597" y="1618"/>
+            <point key="canvasLocation" x="1619" y="1624"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="bBc-tw-5uL">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="3e9-kp-liy" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cLc-Nj-oU3"/>
+                        <viewControllerLayoutGuide type="bottom" id="20W-dw-lMp"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="a5U-ke-qWK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y7a-fO-sZW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--Story Collection View Controller-->
+        <scene sceneID="I6A-fn-BYu">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="EnD-nC-Olq" customClass="StoryCollectionViewController" customModule="FlickrApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hqZ-SY-PwW"/>
+                        <viewControllerLayoutGuide type="bottom" id="xED-fF-tML"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="dIH-KM-aw3">
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="255"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DEE-3d-js2">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iuc-fZ-0DV">
+                                <rect key="frame" x="34" y="178" width="149" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="SHOW HIDE">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="storyAlphonzo:" destination="EnD-nC-Olq" eventType="touchUpInside" id="4rX-oJ-n3C"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NrB-JO-wnZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2121" y="1623.5"/>
         </scene>
     </scenes>
     <resources>
